--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -12,15 +12,16 @@ services:
         volumes:
           - ./var/pg_data:/var/lib/postgresql
         ports:
-          - 5433:5432
-    # adminer:
-    #     container_name: nsmarket_adminer
-    #     image: adminer
-    #     env_file: ./.env
-    #     links:
-    #       - postgres
-    #     ports:
-    #       - "${DOCKER_HOST_ADDRESS}:${DATABASE_ADMIN_PORT}:8080"
+          - "5432:5432"
+    pgadmin:
+      restart: always
+      container_name: nsmarket_pgadmin
+      image: dpage/pgadmin4
+      environment:
+        - PGADMIN_DEFAULT_EMAIL=noemail@noemail.com
+        - PGADMIN_DEFAULT_PASSWORD=root
+      ports:
+        - "5050:80"
 
     # node:
     #     container_name: nsmarket_node
