--- a/app/package.json
+++ b/app/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "babel-plugin-inline-react-svg": "^2.0.2",
     "next": "14.0.4",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
     "sequelize": "^6.35.2",
-    "sqlite3": "^5.1.7"
+    "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.7",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
