--- a/app/.sequelizerc
+++ b/app/.sequelizerc
@@ -3,5 +3,6 @@ const path = require('path');
 module.exports = {
     'config': path.resolve('src/app/config', 'db.js'),
     'seeders-path': path.resolve('src/app/seeders'),
-    'migrations-path': path.resolve('src/app/migrations')
+    'migrations-path': path.resolve('src/app/migrations'),
+    'models-path': path.resolve('src/app/models'),
 };
