--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,8 @@
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
-    "sequelize": "^6.35.2",
-    "sequelize-typescript": "^2.1.6",
+    "sequelize": "^6.37.1",
+    "sequelize-typescript": "^2.1.2",
     "sqlite3": "^5.1.7",
     "swr": "^2.2.5"
   },
@@ -30,9 +30,11 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "encoding": "^0.1.13",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "sequelize-cli": "^6.4.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
